# Nastools

./: .gitignore  README.md  config.py  package_list.txt  pyproject.toml  requirements.txt  run.py  version.py
.github/workflows/: build-dev.yml  build-package.yml  build.yml
app/: filetransfer.py
app/db/: __init__.py  main_db.py
app/helper/: __init__.py  file_helper.py  meta_helper.py  words_helper.py
app/media/: media.py
app/media/doubanapi/: webapi.py
app/media/meta/: _base.py  metaanime.py  metainfo.py  metavideo.py  release_groups.py
app/utils/: path_utils.py  string_utils.py  tokens.py
config/: config.yaml
docker/: Dockerfile  Dockerfile.beta
package/: pyproject.toml
web/: action.py  apiv1.py  main.py
web/static/components/layout/navbar/: index.js
web/templates/: navigation.html  service.html
web/templates/setting/: library.html
